Fixed CSS dependancies that were missing when being built on openshift

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,9 @@
   @include flex-box();
   @include flex-direction(column);
   display: -webkit-box;
+  /* had to manually add these as they weren't getting added on Openshift */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
 
   min-height: 100vh;
   background: #036;
